Gap fix

--- a/_sass/_layout-event.scss
+++ b/_sass/_layout-event.scss
@@ -123,7 +123,6 @@
             flex-direction: row;
 
             .about {
-                gap: 12px;
                 justify-content: center;
             }
         }
